--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Emanuele DelBono",
   "license": "MIT",
   "dependencies": {
+    "bulma": "^0.1.0",
+    "font-awesome": "^4.6.3",
     "jquery": "^3.0.0",
     "moment": "^2.14.1",
     "node-static": "^0.7.7",
