--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "font-awesome-webpack": "0.0.4",
+    "font-awesome-sass-loader": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
     "jsdom": "^9.4.1",
     "mocha": "^2.5.3",
