--- a/eslint.config.json
+++ b/eslint.config.json
@@ -240,7 +240,8 @@
     // disallow use of undefined variable
     "no-undefined": 0,
     // disallow declaration of variables that are not used in the code
-    "no-unused-vars": [2, { "vars": "local", "args": "after-used" }],
+    // TODO: EMA: Reactivate
+    "no-unused-vars": [0, { "vars": "local", "args": "after-used" }],
     // disallow use of variables before they are defined
     "no-use-before-define": 0,
 
