--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,9 @@
     "development": {
       "presets": ["react-hmre"]
     },
+    "production": {
+      "presets": []
+    },
     "test" :{
         "presets": []
     }
