--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bulma": "^0.1.0",
     "font-awesome": "^4.6.3",
     "jquery": "^3.0.0",
-    "moment": "^2.14.1",
+    "moment": "2.14.1",
     "nock": "^8.0.0",
     "node-static": "^0.7.7",
     "ramda": "^0.21.0",
