--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     "es2015",
     "react"
   ],
-  "plugins": "add-module-exports",
+  "plugins": ["add-module-exports","react-require"],
   "env": {
     "development": {
       "presets": ["react-hmre"]
