--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-module-resolver": "2.2.0",
+    "babel-plugin-react-require": "2.1.0",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
