--- a/package.json
+++ b/package.json
@@ -14,53 +14,52 @@
   "author": "Emanuele DelBono",
   "license": "MIT",
   "dependencies": {
-    "bulma": "^0.1.0",
-    "font-awesome": "^4.6.3",
-    "jquery": "^3.0.0",
-    "moment": "2.14.1",
-    "ramda": "^0.21.0",
-    "react": "^15.2.0",
-    "react-dom": "^15.2.0",
-    "react-router": "^2.5.2",
-    "superagent": "^2.1.0",
-    "xstream": "6.2.0"
+    "bulma": "0.2.1",
+    "font-awesome": "4.6.3",
+    "moment": "2.15.1",
+    "ramda": "0.22.1",
+    "react": "15.3.2",
+    "react-dom": "15.3.2",
+    "react-router": "2.8.1",
+    "superagent": "2.3.0",
+    "xstream": "6.4.1"
   },
   "devDependencies": {
-    "babel-core": "^6.10.4",
-    "babel-eslint": "^6.1.0",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-core": "6.10.4",
+    "babel-eslint": "6.1.0",
+    "babel-loader": "6.2.4",
+    "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-module-resolver": "2.2.0",
     "babel-plugin-react-require": "2.1.0",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-register": "^6.9.0",
-    "chai": "^3.5.0",
-    "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.23.1",
-    "enzyme": "^2.3.0",
-    "eslint": "^3.0.1",
-    "eslint-loader": "^1.4.1",
-    "eslint-plugin-react": "^5.2.2",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "font-awesome-sass-loader": "^1.0.1",
+    "babel-plugin-react-transform": "2.0.2",
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-react": "6.11.1",
+    "babel-preset-react-hmre": "1.1.1",
+    "babel-register": "6.9.0",
+    "chai": "3.5.0",
+    "copy-webpack-plugin": "3.0.1",
+    "css-loader": "0.23.1",
+    "enzyme": "2.3.0",
+    "eslint": "3.0.1",
+    "eslint-loader": "1.4.1",
+    "eslint-plugin-react": "5.2.2",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.9.0",
+    "font-awesome-sass-loader": "1.0.1",
     "html-webpack-plugin": "2.22.0",
-    "jsdom": "^9.4.1",
-    "mocha": "^2.5.3",
-    "nock": "^8.0.0",
-    "node-sass": "^3.8.0",
-    "react-addons-test-utils": "^15.2.0",
-    "react-hot-loader": "^1.3.0",
-    "sass-loader": "^4.0.0",
-    "sinon": "^1.17.5",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.12.1"
+    "jsdom": "9.4.1",
+    "mocha": "2.5.3",
+    "nock": "8.0.0",
+    "node-sass": "3.8.0",
+    "react-addons-test-utils": "15.2.0",
+    "react-hot-loader": "1.3.0",
+    "sass-loader": "4.0.0",
+    "sinon": "1.17.5",
+    "style-loader": "0.13.1",
+    "url-loader": "0.5.7",
+    "webpack": "1.13.1",
+    "webpack-dev-middleware": "1.6.1",
+    "webpack-dev-server": "1.14.1",
+    "webpack-hot-middleware": "2.12.1"
   }
 }
