--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "start": "node www",
-    "dev": "webpack-dev-server --hot --progress --colors --content-base dist/",
+    "dev": "webpack-dev-server --hot --progress --content-base dist/",
     "prod": "BABEL_ENV=production webpack --config webpack-production.config.js  --progress --profile --colors",
     "test": "BABEL_ENV=test mocha --compilers js:babel-register --require tests/.setup.js tests/**/*-test.js"
   },
