--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node www",
     "dev": "webpack-dev-server --hot --progress --content-base dist/",
     "prod": "BABEL_ENV=production webpack --config webpack-production.config.js  --progress --profile --colors",
-    "test": "BABEL_ENV=test mocha --compilers js:babel-register --require tests/.setup.js tests/**/*-test.js"
+    "test": "BABEL_ENV=test mocha --compilers js:babel-register --require tests/.setup.js 'tests/**/*-test.js'"
   },
   "author": "Emanuele DelBono",
   "license": "MIT",
