--- a/package.json
+++ b/package.json
@@ -7,59 +7,60 @@
   },
   "scripts": {
     "start": "node www",
-    "dev": "webpack-dev-server --hot --progress --content-base dist/",
-    "prod": "BABEL_ENV=production webpack --config webpack-production.config.js  --progress --profile --colors",
-    "test": "BABEL_ENV=test mocha --compilers js:babel-register --require tests/.setup.js 'tests/**/*-test.js'"
+    "dev": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --progress --content-base dist/",
+    "prod": "BABEL_ENV=production ./node_modules/webpack/bin/webpack.js --config webpack-production.config.js  --progress --profile --colors",
+    "test": "BABEL_ENV=test ./node_modules/mocha/bin/_mocha --compilers js:babel-register --require tests/.setup.js 'tests/**/*-test.js'"
   },
   "author": "Emanuele DelBono",
   "license": "MIT",
   "dependencies": {
-    "bulma": "0.3.0",
+    "bulma": "0.4.0",
     "font-awesome": "4.7.0",
-    "moment": "2.17.1",
-    "ramda": "0.22.1",
-    "react": "15.4.1",
-    "react-dom": "15.4.1",
-    "react-router": "3.0.0",
-    "superagent": "2.3.0",
-    "xstream": "9.3.0"
+    "moment": "2.18.1",
+    "prop-types": "15.5.8",
+    "ramda": "0.23.0",
+    "react": "15.5.4",
+    "react-dom": "15.5.4",
+    "react-router": "4.1.1",
+    "superagent": "3.5.2",
+    "xstream": "10.5.0"
   },
   "devDependencies": {
-    "babel-core": "6.21.0",
-    "babel-eslint": "7.1.1",
-    "babel-loader": "6.2.10",
+    "babel-core": "6.24.1",
+    "babel-eslint": "7.2.3",
+    "babel-loader": "7.0.0",
     "babel-plugin-add-module-exports": "0.2.1",
-    "babel-plugin-module-resolver": "2.4.0",
+    "babel-plugin-module-resolver": "2.7.0",
     "babel-plugin-react-require": "3.0.0",
     "babel-plugin-react-transform": "2.0.2",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-react": "6.16.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
     "babel-preset-react-hmre": "1.1.1",
-    "babel-register": "6.18.0",
+    "babel-register": "6.24.1",
     "chai": "3.5.0",
     "copy-webpack-plugin": "4.0.1",
-    "css-loader": "0.26.1",
-    "enzyme": "2.7.0",
-    "eslint": "3.12.2",
-    "eslint-loader": "1.6.1",
-    "eslint-plugin-react": "6.8.0",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.9.0",
-    "font-awesome-sass-loader": "1.0.1",
-    "html-webpack-plugin": "2.24.1",
-    "jsdom": "9.9.1",
+    "css-loader": "0.28.0",
+    "enzyme": "2.8.2",
+    "eslint": "3.19.0",
+    "eslint-loader": "1.7.1",
+    "eslint-plugin-react": "6.10.3",
+    "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "0.11.1",
+    "font-awesome-sass-loader": "2.0.1",
+    "html-webpack-plugin": "2.28.0",
+    "jsdom": "9.12.0",
     "mocha": "3.2.0",
-    "nock": "9.0.2",
-    "node-sass": "4.1.1",
-    "react-addons-test-utils": "15.4.1",
-    "react-hot-loader": "1.3.0",
-    "sass-loader": "4.0.0",
-    "sinon": "1.17.6",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
-    "webpack": "1.14.0",
-    "webpack-dev-middleware": "1.9.0",
-    "webpack-dev-server": "1.16.2",
-    "webpack-hot-middleware": "2.14.0"
+    "nock": "9.0.13",
+    "node-sass": "4.5.2",
+    "react-addons-test-utils": "15.5.1",
+    "react-hot-loader": "1.3.1",
+    "sass-loader": "6.0.3",
+    "sinon": "2.1.0",
+    "style-loader": "0.16.1",
+    "url-loader": "0.5.8",
+    "webpack": "2.4.1",
+    "webpack-dev-middleware": "1.10.2",
+    "webpack-dev-server": "2.4.3",
+    "webpack-hot-middleware": "2.18.0"
   }
 }
