--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bulma": "0.4.0",
     "font-awesome": "4.7.0",
+    "font-awesome-webpack2": "0.0.6",
     "moment": "2.18.1",
     "prop-types": "15.5.8",
     "ramda": "0.23.0",
