--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "style-loader": "0.17.0",
     "url-loader": "0.5.8",
     "webpack": "2.5.0",
+    "webpack-bundle-analyzer": "2.8.1",
     "webpack-dev-middleware": "1.10.2",
     "webpack-dev-server": "2.4.5",
     "webpack-hot-middleware": "2.18.0"
