--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "prod": "BABEL_ENV=production ./node_modules/webpack/bin/webpack.js --config webpack-production.config.js  --progress --profile --colors",
     "test": "BABEL_ENV=test ./node_modules/mocha/bin/_mocha --compilers js:babel-register --require tests/.setup.js 'tests/**/*-test.js'"
   },
+  "jest": {
+    "testPathIgnorePatterns": ["/node_modules/", "/src/"]
+  },
   "author": "Emanuele DelBono",
   "license": "MIT",
   "dependencies": {
@@ -26,6 +29,7 @@
   "devDependencies": {
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.1",
     "babel-loader": "7.0.0",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-module-resolver": "2.7.0",
