--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "test": "BABEL_ENV=test ./node_modules/mocha/bin/_mocha --compilers js:babel-register --require tests/.setup.js 'tests/**/*-test.js'"
   },
   "jest": {
-    "testPathIgnorePatterns": ["/node_modules/", "/src/"]
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/src/"
+    ]
   },
   "author": "Emanuele DelBono",
   "license": "MIT",
@@ -50,12 +53,14 @@
     "file-loader": "0.11.1",
     "font-awesome-sass-loader": "2.0.1",
     "html-webpack-plugin": "2.28.0",
+    "jest": "20.0.1",
     "jsdom": "10.1.0",
     "mocha": "3.3.0",
     "nock": "9.0.13",
     "node-sass": "4.5.2",
     "react-addons-test-utils": "15.5.1",
     "react-hot-loader": "1.3.1",
+    "react-test-renderer": "15.5.4",
     "sass-loader": "6.0.3",
     "sinon": "2.2.0",
     "style-loader": "0.17.0",
