--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "code-jam-veggy",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A special timer",
   "engines": {
     "node": "*"
@@ -9,7 +9,7 @@
     "start": "node www",
     "dev": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --progress --content-base dist/",
     "prod": "BABEL_ENV=production ./node_modules/webpack/bin/webpack.js --config webpack-production.config.js  --progress --profile --colors -p",
-    "test": "BABEL_ENV=test ./node_modules/mocha/bin/_mocha --compilers js:babel-register --require tests/.setup.js 'tests/**/*-test.js'"
+    "test": "jest"
   },
   "jest": {
     "testPathIgnorePatterns": [
